# age-groups

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  main.py  processor.py  pyproject.toml
config/: settings.py
infra/localstack/: init-tables.sh  init.sh
src/: app.py  routes.py
src/domains/age_groups/api/: endpoints.py
src/domains/age_groups/schema/: __init__.py  age_group.py
src/domains/enrollments/: processor.py
src/domains/enrollments/api/: endpoints.py
src/domains/enrollments/services/: enrollment_service.py
src/shared/: auth.py  dependencies.py  singleton.py
src/shared/infra/broker/: __init__.py  base_handler.py  sqs.py
src/shared/infra/database/: dynamodb.py
src/shared/infra/database/repository/: age_group_repository.py  enrollment_repository.py
tests/: conftest.py
tests/fixtures/: client.py
tests/integrations/: test_age_group_endpoint.py  test_enrollment_endpoint.py  test_enrollment_processor.py
tests/unittest/src/domains/age_groups/: test_endpoints.py
